# caustica

./: .clang-format  .gitignore  .gitmodules  3dgs_gi.md  CMakeLists.txt  README.md  _paper_extract.txt  archtech.md  optical_demo.html  py_caustica.md  setup.py
caustica/: AdvancedSample.h  CMakeLists.txt  DepthHierarchyRenderer.cpp  DepthHierarchyRenderer.h  GTAORenderer.cpp  GTAORenderer.h  IntroSample.cpp  IntroSample.h  Sample.cpp  Sample.h  SampleUI.cpp  SampleUI.h  caustica.cpp  caustica.h  shaders.cfg  shaders_vk.cfg
caustica/Framework/: CMakeLists.txt
caustica/GPUSort/: FFX_ParallelSort.h  GPUSort.cpp  GPUSort.h  GPUSort.hlsl
caustica/Lighting/: LightsBaker.cpp  LightsBaker.h  LightsBaker.hlsl
caustica/Lighting/Distant/: EnvMapBaker.cpp  EnvMapBaker.h  EnvMapBaker.hlsl  EnvMapImportanceSamplingBaker.cpp  EnvMapImportanceSamplingBaker.h  EnvMapImportanceSamplingBaker.hlsl  ImageBasedLighting.hlsli  SampleProceduralSky.cpp  SampleProceduralSky.h  SampleProceduralSky.hlsli  precomputed_sky.hlsli
caustica/Materials/: MaterialsBaker.cpp  MaterialsBaker.h
caustica/Misc/: DebugLines.hlsl  Korgi.h  ShaderDebug.cpp  ShaderDebug.h  ZoomTool.cpp  ZoomTool.h
caustica/NRD/: DenoiserNRD.hlsli  NrdConfig.cpp  NrdIntegration.cpp  NrdIntegration.h
caustica/OpacityMicroMap/: OmmBaker.cpp  OmmBaker.h  OmmBuildQueue.cpp  OmmBuildQueue.h
caustica/ProcessingPasses/: AccumulationPass.cpp  AccumulationPass.h  AccumulationPass.hlsl  DenoisingGuidesBaker.cpp  DenoisingGuidesBaker.h  DenoisingGuidesBaker.hlsl  ExportVisibilityBuffer.hlsl  GaussianSplatEmissionProxy.h  GaussianSplatPass.cpp  GaussianSplatPass.h  GaussianSplatRaster.hlsl  OidnDenoiser.cpp  OidnDenoiser.h  PostProcess.cpp  PostProcess.h  PostProcess.hlsl
caustica/Python/: PythonBindingsCore.cpp  PythonBindingsCore.h  PythonBindings_Embed.cpp  PythonBindings_Extension.cpp  PythonScripting.cpp  PythonScripting.h  RenderSession.cpp  RenderSession.h
caustica/Python/Examples/: 3dgs_example.py  README.md  example_animate_lights.py  example_basic.py  example_modes_dlss_oidn.py  launch_default_scene.py  offline_render.py  realtime_render.py  render_assets.py  render_default_scene.py  render_default_scene_animated.py  render_gs_colmap_views.py  render_m_plate.py  test_envmap_proc_sky.py  test_intrinsics_demo.py  test_splat_interactive.py
caustica/RTXDI/: GIFinalShading.hlsl  GITemporalResampling.hlsl  GeneratePdfMipsPass.cpp  GeneratePdfMipsPass.h  HelperFunctions.hlsli  PTFinalShading.hlsl  PTTemporalResampling.hlsl  PolymorphicLightRTXDI.hlsli  PrepareLights.hlsl  PrepareLightsPass.cpp  PrepareLightsPass.h  PreprocessEnvironmentMap.hlsl  PresampleLights.hlsl  PresampleReGIR.hlsl  RayTracingPass.cpp  RtxdiApplicationBridge.hlsli  RtxdiApplicationSettings.cpp  RtxdiPass.cpp  RtxdiPass.h  RtxdiResources.cpp  SetSurfaceData.hlsli  ShaderParameters.h  SpatioTemporalResampling.hlsl  SurfaceData.hlsli  TemporalResampling.hlsl
caustica/SampleCommon/: AccelerationStructureUtil.h  CaptureScriptManager.cpp  CaptureScriptManager.h  CommandLine.cpp  CommandLine.h  ComputePass.cpp  ComputePipelineBaker.cpp  ComputePipelineBaker.h  ExtendedScene.cpp  ExtendedScene.h  LocalConfig.cpp  LocalConfig.h  PTPipelineBaker.cpp  PTPipelineBaker.h  RenderTargets.cpp  RenderTargets.h  SampleBaseApp.cpp  SampleBaseApp.h  SampleCommon.cpp  SampleCommon.h  ShaderCompilerUtils.cpp  ShaderCompilerUtils.h  ShaderPackFileSystem.cpp  ShaderPackFileSystem.h  SplashScreen.h
caustica/SampleGame/: GameMisc.cpp  GameMisc.h  GameModel.cpp  GameModel.h  GamePropComponent.cpp  GamePropComponent.h  GameProps.cpp  GameProps.h  GameScene.cpp  GameScene.h
caustica/Shaders/: HybridGaussianShadow.hlsli  PathTracerBridgeDonut.hlsli  PathTracerMaterialSpecializations.hlsl  PathTracerSample.hlsl  SubInstanceData.h  TestRaygenPP.hlsl
caustica/Shaders/Bindings/: BindingDataTypes.hlsli  GBufferBindings.hlsli  LightingBindings.hlsli  ReSTIRBindings.hlsli  SamplerBindings.hlsli  SceneBindings.hlsli  ShaderResourceBindings.hlsli
caustica/Shaders/IntroSample/: GTAOPasses.hlsl  IntroCommon.hlsli  IntroPathTracer.hlsl  LocalCubemapRT.hlsl  PopulateGBuffer.hlsl  RasterDeferredLighting.hlsl  SSRPasses.hlsl
caustica/Shaders/Misc/: GBufferHelpers.hlsli  OmmGeometryDebugData.hlsli
caustica/Shaders/PathTracer/: PathState.hlsli  PathTracerDebug.hlsli  PathTracerHelpers.hlsli  PathTracerNEE.hlsli  PathTracerShared.h  PathTracerTypes.hlsli  StablePlanes.hlsli
caustica/ToneMapper/: ColorUtils.h  ToneMapperParams.hlsli  ToneMapping.hlsl  ToneMapping.ps.hlsli  ToneMappingPasses.cpp  ToneMappingPasses.h  ToneMapping_cb.h  luminance_ps.hlsl
caustica/base/: CMakeLists.txt
caustica/caustica/: CMakeLists.txt  caustica.natvis
caustica/caustica/nrd/: .gitignore  CMakeLists.txt  UPDATE.md
caustica/caustica/shaders/: EngineShaders.cfg  FrameConstantBuffer.h  PathTracerBridge.hlsli  PathTracerBridgeDonut.hlsli  PathTracerBridgeEngine.hlsli  PathTracerMaterialSpecializations.hlsl  PathTracerSample.hlsl  PathTracerShaders.cfg  SERUtils.hlsli  SampleConstantBuffer.h  SubInstanceData.h  TestRaygenPP.hlsl  binding_helpers.hlsli  bindless.h  blit_cb.h  bloom_cb.h  brdf.hlsli  deferred_lighting_cb.h  depth_cb.h  forward_cb.h  forward_vertex.hlsli  gbuffer.hlsli  gbuffer_cb.h  hash_based_rng.hlsli  (+27 more)
caustica/editor/: CMakeLists.txt
caustica/engine/: CMakeLists.txt
caustica/source/: CMakeLists.txt
caustica/tinytensor/: CMakeLists.txt  README.md  cuda_stream_context.cpp  gpu_slab_allocator.cpp  lazy_config.cpp  lazy_executor.cpp  lazy_ir.cpp  pinned_memory_allocator.cpp  tensor.cpp  tensor_advanced_ops.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_dot_optimized.cu  tensor_exports.cu  tensor_factory.cpp  tensor_fused_pointwise.cu  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_matrix_ops.cpp  tensor_matrix_ops.cu  tensor_movement_ops.cpp  tensor_nn_ops.cpp  tensor_nn_ops.cu  tensor_ops.cu  tensor_random_ops.cpp  tensor_random_ops.cu  tensor_row_proxy.cpp  tensor_shape_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp  tensor_utils.cpp  tensor_warp_reduce.cu
(+1967 files in other folders)
